# CardioXNet

./: .env.example  .gitignore  CARDIAC_CONTEXT_DOCUMENTATION.md  CRITICAL_FIXES_SUMMARY.md  CURRENT_STATE_OBSERVATIONS.md  CardioXNet_Abstract.md  DEPLOYMENT.md  Data_Integration_and_Coverage_Slide.md  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  FINAL_REFINEMENTS_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  ONLINE_DEPLOYMENT_INFO.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  README-DEPLOYMENT.md  README.md  REFINEMENTS_SUMMARY.md  REORGANIZATION_COMPLETE.md  RESULTS_PAGE_FINDINGS.md  STAGE_REORGANIZATION_PLAN.md  Significance_and_Innovation_Slide.md  TEST_VERIFICATION_REPORT.md  TOP_GENES_IMPLEMENTATION_SUMMARY.md  UI_FIXES_SUMMARY.md  WORKFLOW_DOCUMENTATION.md  capture_diabetic_demo.py  capture_diabetic_screenshots.py  capture_screenshots.py  deploy-github-pages.sh  docker-compose.yml  pyproject.toml  requirements.txt  submit_diabetic_analysis.py  workflow_diagram.mmd
app/: __init__.py  main.py
config/: config.example.yaml  config.yaml
docs/: CONFIGURATION.md  index.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
outputs/: analysis_20251114_092931_report.json  analysis_20251209_050402_report.json  analysis_20251209_053531_report.json  analysis_20251209_054256_report.json  analysis_20251209_104910_report.json  analysis_20251209_112453_report.json  analysis_20251209_113351_report.json  analysis_20251209_114841_report.json  (+21 more)
scripts/: trim_workspace.py  (+1 more)
(+115 files in other folders)
