[tool.poetry]
name = "cardioxnet"
version = "0.1.0"
description = "CardioXNet - Cardiac Repair Pathway Discovery Platform"
authors = ["CardioXNet Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
pandas = "^2.1.0"
tenacity = "^8.2.0"
networkx = "^3.2.0"
biopython = "^1.81"
aiohttp = "^3.9.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
